--- a/src/app/components/pages/warranty/warranty-request/create/create.component.css
+++ b/src/app/components/pages/warranty/warranty-request/create/create.component.css
@@ -197,3 +197,73 @@
 .product__item-left {
     margin-right: 10px;
 }
+
+label.custom-file-upload {
+    background-color: rgba(42, 41, 134, 0.5);
+    color: white;
+    padding: 0.65rem;
+    font-family: sans-serif;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+.input-input-wrap:hover label.custom-file-upload {
+    background-color: var(--primary-color);
+}
+
+#file-chosen {
+    margin-left: 0.5rem;
+    font-family: sans-serif;
+}
+
+.input-input-wrap{
+    border: 1px solid rgba(42, 41, 134, 0.5);
+    width: 100%;
+    border-radius: 0.3rem;
+    transition: 0.5s linear;
+}
+.input-input-wrap:hover {
+    border: 1px solid var(--primary-color);
+}
+
+.custom-file-upload{
+ border-top-right-radius: 0 !important;
+ border-bottom-right-radius: 0 !important;
+}
+
+#datetime-picker {
+    width: 210px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 1px solid #2a2986;
+    border-radius: 8px;
+    background-color: rgba(42, 41, 134, 0.05);
+    /* Màu nền nhẹ */
+    color: #2a2986;
+    outline: none;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+#datetime-picker:focus {
+    border-color: rgba(42, 41, 134, 0.8);
+    /* Thay đổi màu viền khi focus */
+    box-shadow: 0 0 5px rgba(42, 41, 134, 0.3);
+    /* Hiệu ứng đổ bóng khi focus */
+}
+
+#datetime-picker::placeholder {
+    color: #b1b1b1;
+    /* Màu cho placeholder */
+    opacity: 0.8;
+}
+
+#datetime-picker:hover {
+    background-color: rgba(42, 41, 134, 0.1);
+    /* Hiệu ứng nền khi hover */
+}
+
+#datetime-picker:disabled {
+    background-color: #f0f0f0;
+    color: #ccc;
+    cursor: not-allowed;
+}
