--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -570,6 +570,7 @@
                             <button
                                 pButton
                                 pRipple
+                                [disabled]="isSubmitting"
                                 icon="pi pi-plus"
                                 label="Lưu"
                                 (click)="onSubmit()"
