--- a/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
+++ b/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
@@ -244,7 +244,7 @@
                                     {{ data.productName }}
                                 </td>
                                 <td style="width: 12.5%; text-align: center">
-                                    {{ data.productPrice.toLocaleString(
+                                    {{ data.productPrice?.toLocaleString(
                                         "vi-VN",
                                         {
                                             style: "currency",
@@ -287,6 +287,7 @@
                     
                     <p-table
                         #dt
+                        *ngIf="groupedByProductVariantId.length > 0" 
                         [value]="groupedByProductVariantId"
                         responsiveLayout="scroll"
                         [rowHover]="true"
@@ -337,7 +338,7 @@
                                 {{ data.productVariantName  }}
                             </td>
                             <td style="width: 12.5%; text-align: center">
-                                {{ data.productVariantPrice .toLocaleString(
+                                {{ data.productVariantPrice?.toLocaleString(
                                     "vi-VN",
                                     {
                                         style: "currency",
@@ -394,7 +395,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end"
                                 >
-                                    {{ this.stockInReceipt.createdAt }}
+                                    {{ this.stockInReceipt?.createdAt }}
                                 </div>
                             </div>
 
@@ -405,7 +406,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end"
                                 >
-                                    {{  this.ladingData.code || 'Không có mã' }} 
+                                    {{  this.ladingData?.code || 'Không có mã' }} 
                                 </div>
                             </div>
 
@@ -418,7 +419,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end"
                                 >
-                                    {{ this.ladingData.toBranchName }}
+                                    {{ this.ladingData?.toBranchName }}
                                 </div>
                             </div>
                             
@@ -428,7 +429,7 @@
                                     Trạng thái:
                                 </div>
                                 <div class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end">
-                                    {{ this.ladingData.iAccepted === 'waiting' ? 'Đang chuyển' : this.ladingData.iAccepted }}
+                                    {{ this.ladingData?.iAccepted === 'waiting' ? 'Đang chuyển' : this.ladingData?.iAccepted }}
                                 </div>
                             </div>
 
@@ -462,7 +463,7 @@
                                 <!-- Ghi chú -->
                                 <label htmlFor="email1">Ghi chú</label>
                                 <textarea
-                                    [(ngModel)]="this.ladingData.note"
+                                    [(ngModel)]="recipientNote"
                                     pInputTextarea
                                     spellcheck="false"
                                 ></textarea>
