--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -67,13 +67,13 @@
                                     >Chọn chi nhánh:</label
                                 >
                                 <p-dropdown
-                                    [options]="this.optionsStatus"
-                                    [(ngModel)]="this.statusFilter"
-                                    optionLabel="name"
-                                    [showClear]="true"
-                                    placeholder="Chọn chi nhánh"
-                                >
-                                </p-dropdown>
+                                  [options]="branch" 
+                                  optionLabel="shortenedName" 
+                                  [(ngModel)]="selectedBranch"
+                                  optionValue="id"
+                                  [showClear]="true"
+                                  placeholder="Chọn chi nhánh">
+                            </p-dropdown>
                             </div>
                             <div class="flex flex-column">
                                 <label
@@ -119,9 +119,9 @@
                         <th style="width: 8%; font-size: 14px;">Mã chuyển hàng</th>
                         <th style="width: 12%; font-size: 14px;">Người tạo</th>
                         <th style="width: 12%; font-size: 14px;">Từ chi nhánh</th>
-                        <th style="width: 12%; font-size: 14px; text-align: center;">Đến chi nhánh</th>
-                        <th style="width: 6%; font-size: 14px; text-align: center;">Trạng thái</th>
-                        <th style="width: 5%; font-size: 14px; text-align: center;">Số sản phẩm</th>
+                        <th style="width: 12%; font-size: 14px;">Đến chi nhánh</th>
+                        <th style="width: 8%; font-size: 14px;">Trạng thái</th>
+                        <th style="width: 5%; font-size: 14px;">Số sản phẩm</th>
                       </tr>
                     </ng-template>
 
@@ -133,7 +133,18 @@
                         <td style="font-size: 14px;">{{ user.userName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.fromBranchName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.toBranchName }}</td>
-                        <td style="font-size: 14px;">{{ user.iAccepted}}</td>
+                        <td style="text-align: center;">
+                          <button
+                            class="status-button"
+                            [ngClass]="{
+                              'status-waiting': user.iAccepted === 'waiting',
+                              'status-accept': user.iAccepted === 'accept',
+                              'status-reject': user.iAccepted === 'reject'
+                            }"
+                          >
+                            {{ getStatus(user.iAccepted) }}
+                          </button>
+                        </td>
                         <td style="font-size: 14px;">{{ user.totalCount }}</td>
                     </tr>
                     </ng-template>
